# sk-website

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml  sk-config-example.yaml
migrations/: 20240404211108_create_users_table.up.sql
sk_website_application/: Cargo.toml
sk_website_application/src/: commons.rs  dto.rs  lib.rs
sk_website_application/src/commands/: admin_create_user.rs  create_superuser.rs  create_user.rs  mod.rs
sk_website_application/src/queries/: mod.rs  user_get_profile.rs
sk_website_domain/: Cargo.toml
sk_website_domain/src/: entities.rs  repositories.rs
sk_website_domain/src/entities/: mod.rs  user.rs
sk_website_domain/src/value_objects/: email.rs  localization.rs  mod.rs  phonenumber.rs  user_birthdate.rs  user_id.rs  user_jobs.rs  user_names.rs
sk_website_infrastructure/: Cargo.toml
sk_website_infrastructure/src/: parser.rs
sk_website_infrastructure/src/database/: mod.rs  sqlx_user_repository.rs
sk_website_presentation/cli/: Cargo.toml
sk_website_presentation/cli/src/: dependency_injection.rs  main.rs
sk_website_presentation/web/: .gitignore  Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json  tailwind.config.js
sk_website_presentation/web/public/: tailwind.css
sk_website_presentation/web/src/: dependency_injection.rs  main.rs  models.rs
sk_website_presentation/web/src/views/: mod.rs  routes.rs
sk_website_presentation/web/src/views/atoms/: button.rs  mod.rs  title.rs
sk_website_presentation/web/src/views/molecules/: mod.rs  social_icons.rs
sk_website_presentation/web/src/views/organisms/: container.rs  home_about.rs  home_hero.rs  home_navbar.rs  home_resume.rs  home_services.rs  home_stats.rs  mod.rs  service_card.rs
sk_website_presentation/web/src/views/pages/: blog.rs  home.rs  mod.rs
