[package]
name = "sk_website_domain"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

validator = { version = "0.17.0", features = ["derive"] }
