[package]
name = "sk_website_infrastructure"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sk_website_domain = { path = "../sk_website_domain" }

async-trait = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
