[package]
name = "sk_website_application_cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sk_website_application = { path = "../../sk_website_application" }
sk_website_infrastructure = { path = "../../sk_website_infrastructure" }

chrono = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
